change sql query to more performante one